Better switch logic

--- a/respackopts.json5
+++ b/respackopts.json5
@@ -3,7 +3,9 @@
     version: 13,
     capabilities: ["FileFilter", "DirFilter"],
     conf: {
-        fusionFeature: true,
-        continuityFeature: true
+        supportSelection: {
+            fusionFeature: true,
+            continuityFeature: true
+        }
     }
 }
